# amoeba2

./: Cargo.toml
src/: app.rs  config.rs  main.rs  response.rs  theme.rs
src/query/: content_search.rs  file_search.rs  mock_engine.rs  mod.rs  response.rs  wikipedia.rs
src/query/wikipedia/: mod.rs
