[package]
name = "amoeba"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
async-process = "2.5.0"
confy = "2.0.0"
eframe = { version = "0.33.3", features = ["wgpu"] }
egui = { version = "0.33.3", features = ["rayon", "mint"] }
egui_flex = "0.5.0"
env_logger = "0.11.8"
futures = { version = "0.3.31", features = ["thread-pool", "executor"] }
flume = { version = "0.12.0", features = ["async"] }
lazy_static = "1.5.0"
dotenv = "0.15.0"
num_cpus = "1.17.0"
log = "0.4.29"
parking_lot = { version = "0.12.5", features = ["send_guard"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
futures-timer = "3.0.3"
uuid = { version = "1.19.0", features = ["v4"] }
surf = "2.3.2"
strfmt = "0.2.5"
